# ConnectFour

./: .gitignore  CMakeLists.txt  INSTALL.md  Makefile  README.md  TODO.md  appinfo.h  appinfo.h.in.cmake  c4.c  c4.h  core.c  core.h  helper.c  helper.h  multiplayer.c
cmake/modules/: FindNSPR.cmake
