cmake_minimum_required (VERSION 3.1)
project (connectFour)
set (APPLICATION_NAME "${PROJECT_NAME}")
set (APPLICATION_CODENAME "${PROJECT_NAME}")
set (APPLICATION_VERSION_MAJOR 0)
set (APPLICATION_VERSION_MINOR 2)
set (APPLICATION_VERSION_PATCH 1)
set (APPLICATION_VERSION_TYPE SNAPSHOT)
set (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")

# Compiler Options
add_definitions (-std=c11)

# Debugging Options
set (CMAKE_VERBOSE_MAKEFILE 0) # Use 1 for debugging, 0 for release
set (BUILD_SHARED_LIBS 0)

# Build Project
add_executable (${PROJECT_NAME} c4.c core.c helper.c)
target_link_libraries (${PROJECT_NAME} ${})
set_target_properties (${PROJECT_NAME} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}" OUTPUT_NAME ${PROJECT_NAME} CLEAN_DIRECT_OUTPUT 1)

install (TARGETS ${PROJECT_NAME} DESTINATION bin)
